--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,48 +1,114 @@
 /* Box Model Hack */
+
 * {
   box-sizing: border-box;
 }
 
 /* Clear fix hack */
+
 .clearfix:after {
-     content: ".";
-     display: block;
-     clear: both;
-     visibility: hidden;
-     line-height: 0;
-     height: 0;
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
 }
 
 .clear {
-	clear: both;
+  clear: both;
 }
 
 /******************************************
 /* BASE STYLES
 /*******************************************/
-html{
+
+html {
   font-size: 12px;
 }
+
 body {
   line-height: 1.4;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
+.bg {
+  background-image: url('/img/main-bg.png');
+  background-size: auto;
+  background-repeat: no-repeat;
+  font-family: 'Playfair Display', serif;
+  font-size: 2em;
+  letter-spacing: 1px;
+}
+
+.page-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
 /******************************************
 /* LAYOUT
 /*******************************************/
-header {
 
+.page-title {
+  font-family: 'Playfair Display', serif;
+  color: #A96F43;
+  font-size: 2em;
 }
 
-footer {
-
+input, button {
+  border-top-style: hidden;
+  border-right-style: hidden;
+  border-left-style: hidden;
+  border-bottom-style: groove;
+  background-color: white;
+  padding: 10px;
+  border-radius: 7px;
 }
 
-section{
+.all-order-container {
+  margin-top: 40px;
+  display: flex;
+  width: 70%;
+  justify-content: space-around;
+}
+
+li {
+  color: #CB9065;
+}
+
+.order-container {
+  background-color: seashell;
+  border-radius: 1em;
+  padding: 1em;
+  flex: 1;
+  width: 80%;
+  margin: 1em;
+  height: 60vh;
+  overflow: scroll;
+}
+
+.order-container-header {
+  text-align: center;
+  font-style: italic;
+}
+
+.order-container-header h2 {
+  font-size: 2em;
+  font-weight: 800;
+}
+
+.nav {
+  text-align: right;
+  padding-right: 5%;
+}
+
+section {
   border: 1px solid black;
 }
+
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
